--- a/local/local-training.ipynb
+++ b/local/local-training.ipynb
@@ -74,6 +74,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this is a comment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -255,6 +263,51 @@
     "    initial_df[\"platelets\"].values\n",
     ")\n",
     "initial_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm = StructureModel()\n",
+    "sm.add_edges_from([\n",
+    "    ('ejection_fraction', 'DEATH_EVENT'),\n",
+    "    ('creatinine_phosphokinase', 'DEATH_EVENT'),\n",
+    "    ('age','DEATH_EVENT'),\n",
+    "    ('smoking','high_blood_pressure'),\n",
+    "    ('age','high_blood_pressure'),            \n",
+    "    ('serum_sodium','DEATH_EVENT'),\n",
+    "    ('high_blood_pressure','DEATH_EVENT'),\n",
+    "    ('anaemia','DEATH_EVENT'),\n",
+    "    ('creatinine_phosphokinase','DEATH_EVENT'),\n",
+    "    ('smoking','DEATH_EVENT')\n",
+    "])\n",
+    "\n",
+    "train, test = train_test_split(initial_df, train_size=0.8, test_size=0.2, random_state=42)\n",
+    "        \n",
+    "bn = BayesianNetwork(sm)\n",
+    "bn = bn.fit_node_states(initial_df)\n",
+    "bn = bn.fit_cpds(train, method=\"BayesianEstimator\", bayes_prior=\"K2\")\n",
+    "\n",
+    "roc, auc = roc_auc(bn, test, \"DEATH_EVENT\")\n",
+    "print(\"Model AUC: \" + str(auc))\n",
+    "\n",
+    "print(classification_report(bn, test, \"DEATH_EVENT\"))\n",
+    "\n",
+    "# save the model\n",
+    "model_path = \"models\"\n",
+    "with open(os.path.join(model_path, 'causal_model.pkl'), 'wb') as out:\n",
+    "    pickle.dump(bn, out)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we want to use this code to create a docker image that can be pushed to ECR and then use that image with Sagemaker"
    ]
   },
   {
