Jonah adding comments and new Jonahdev branch

--- a/local/local-training.ipynb
+++ b/local/local-training.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we need to install the relevant libaries required for this local training usecase. Please note the LocalSession which is needed for this case.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -51,6 +59,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next step is to create a SageMaker Local session, define the ARN for Sagemeker execution and create a session using the 'mlops-prod' profile.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -62,6 +78,14 @@
     "role = 'arn:aws:iam::948014026119:role/service-role/AmazonSageMaker-ExecutionRole-20220620T163773'\n",
     "session = boto3.session.Session(profile_name='mlops-prod')\n",
     "s3 = session.client('s3')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the data location, which is apart of this repository.\n"
    ]
   },
   {
