added comments and fixes from Jenny and Jonah call

--- a/local/local-training.ipynb
+++ b/local/local-training.ipynb
@@ -5,17 +5,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we need to install the relevant libaries required for this local training usecase. Please note the LocalSession which is needed for this case.\n"
+    "First, we need to install the relevant libaries required for this local training usecase. You will need to pip install boto3, pandas and Sagemaker into your Python environment. For this lab, running Python 3.11 as your kernel is recommended. Please see the requirements.txt for what's needed.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tarfile\n",
-    "\n",
     "import boto3\n",
     "import pandas as pd\n",
     "import os\n",
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +33,7 @@
      "output_type": "stream",
      "text": [
       "WARNING:root:MDLP was not imported successfully\n",
-      "/Users/jennyvg/.pyenv/versions/3.9.5/envs/auxmoney/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/opt/homebrew/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -63,12 +62,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step is to create a SageMaker Local session, define the ARN for Sagemeker execution and create a session using the 'mlops-prod' profile.\n"
+    "The next step is to create a SageMaker Local session, define the ARN for Sagemeker execution and create a session using the 'mlops-prod' profile. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,14 +101,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this is a comment"
+    "In the cell, we are doing data pre-processing to make our dataset ML friendly. This code is using a Discretiser class from the causalnex library to transform a continuous feature into a discrete one. \n",
+    "\n",
+    "Taking age as an example, we are using an numeric_split_points=[60], which means it will split the data into two bins: below 60 and above 60. Similar approaches are used on other columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "after pre-processing\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -232,15 +240,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   age  anaemia  creatinine_phosphokinase  diabetes  ejection_fraction   \n",
-       "0    1        0                         2         0                  0  \\\n",
+       "   age  anaemia  creatinine_phosphokinase  diabetes  ejection_fraction  \\\n",
+       "0    1        0                         2         0                  0   \n",
        "1    0        0                         3         0                  2   \n",
        "2    1        0                         1         0                  0   \n",
        "3    0        1                         0         0                  0   \n",
        "4    1        1                         1         1                  0   \n",
        "\n",
-       "   high_blood_pressure  platelets  serum_creatinine  serum_sodium  sex   \n",
-       "0                    1          1                 0             0    1  \\\n",
+       "   high_blood_pressure  platelets  serum_creatinine  serum_sodium  sex  \\\n",
+       "0                    1          1                 0             0    1   \n",
        "1                    0          1                 0             1    1   \n",
        "2                    0          0                 0             0    1   \n",
        "3                    0          0                 0             1    1   \n",
@@ -254,7 +262,7 @@
        "4        0     8            1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,14 +294,79 @@
     "initial_df[\"platelets\"] = Discretiser(method=\"fixed\", numeric_split_points=[263358]).transform(\n",
     "    initial_df[\"platelets\"].values\n",
     ")\n",
+    "\n",
+    "print (\"after pre-processing\")\n",
     "initial_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model AUC: 0.7368055555555555\n",
+      "{'DEATH_EVENT_0': {'precision': 0.6122448979591837, 'recall': 0.8571428571428571, 'f1-score': 0.7142857142857143, 'support': 35.0}, 'DEATH_EVENT_1': {'precision': 0.5454545454545454, 'recall': 0.24, 'f1-score': 0.3333333333333333, 'support': 25.0}, 'accuracy': 0.6, 'macro avg': {'precision': 0.5788497217068646, 'recall': 0.5485714285714285, 'f1-score': 0.5238095238095238, 'support': 60.0}, 'weighted avg': {'precision': 0.5844155844155844, 'recall': 0.6, 'f1-score': 0.5555555555555555, 'support': 60.0}}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.9/site-packages/causalnex/network/network.py:379: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].map(self._node_states[col])\n",
+      "/opt/homebrew/lib/python3.9/site-packages/causalnex/network/network.py:379: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].map(self._node_states[col])\n",
+      "/opt/homebrew/lib/python3.9/site-packages/causalnex/network/network.py:379: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].map(self._node_states[col])\n",
+      "/opt/homebrew/lib/python3.9/site-packages/causalnex/network/network.py:379: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].map(self._node_states[col])\n",
+      "/opt/homebrew/lib/python3.9/site-packages/causalnex/network/network.py:379: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].map(self._node_states[col])\n",
+      "/opt/homebrew/lib/python3.9/site-packages/causalnex/network/network.py:379: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].map(self._node_states[col])\n",
+      "/opt/homebrew/lib/python3.9/site-packages/causalnex/network/network.py:379: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].map(self._node_states[col])\n",
+      "/opt/homebrew/lib/python3.9/site-packages/causalnex/network/network.py:379: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].map(self._node_states[col])\n"
+     ]
+    }
+   ],
    "source": [
     "sm = StructureModel()\n",
     "sm.add_edges_from([\n",
@@ -322,6 +395,9 @@
     "\n",
     "# save the model\n",
     "model_path = \"models\"\n",
+    "isExist = os.path.exists(model_path)\n",
+    "if not isExist:\n",
+    "   os.makedirs(model_path)\n",
     "with open(os.path.join(model_path, 'causal_model.pkl'), 'wb') as out:\n",
     "    pickle.dump(bn, out)"
    ]
@@ -331,42 +407,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we want to use this code to create a docker image that can be pushed to ECR and then use that image with Sagemaker"
+    "Now we want to use this code to create a docker image that can be pushed to ECR and then use that image with Sagemaker\n",
+    "\n",
+    "For this step, we need to create a docker image in our local environment. Please ensure you have 'sagemaker-causalnex-local' in your Docker Images.\n",
+    "\n",
+    "Please run 'docker build -t sagemaker-causal-nex:latest .' in the 'sagemaker-local-to-cloud/local/container' path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating scmjhsri78-algo-1-16lri ... \n",
-      "Creating scmjhsri78-algo-1-16lri ... done\n",
-      "Attaching to scmjhsri78-algo-1-16lri\n",
-      "\u001b[36mscmjhsri78-algo-1-16lri |\u001b[0m WARNING:root:MDLP was not imported successfully\n",
-      "\u001b[36mscmjhsri78-algo-1-16lri |\u001b[0m Starting the training.\n",
-      "\u001b[36mscmjhsri78-algo-1-16lri |\u001b[0m Model AUC: 0.7368055555555555\n",
-      "\u001b[36mscmjhsri78-algo-1-16lri |\u001b[0m {'DEATH_EVENT_0': {'precision': 0.6122448979591837, 'recall': 0.8571428571428571, 'f1-score': 0.7142857142857143, 'support': 35}, 'DEATH_EVENT_1': {'precision': 0.5454545454545454, 'recall': 0.24, 'f1-score': 0.3333333333333333, 'support': 25}, 'accuracy': 0.6, 'macro avg': {'precision': 0.5788497217068646, 'recall': 0.5485714285714285, 'f1-score': 0.5238095238095238, 'support': 60}, 'weighted avg': {'precision': 0.5844155844155844, 'recall': 0.6, 'f1-score': 0.5555555555555555, 'support': 60}}\n",
-      "\u001b[36mscmjhsri78-algo-1-16lri |\u001b[0m Training complete.\n",
-      "\u001b[36mscmjhsri78-algo-1-16lri exited with code 0\n",
-      "\u001b[0mAborting on container exit...\n",
-      "===== Job Complete =====\n"
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (3015496600.py, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[24], line 18\u001b[0;36m\u001b[0m\n\u001b[0;31m    instance_type=\"local\")\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
      ]
     }
    ],
    "source": [
-    "image = 'sagemaker-causalnex-local'\n",
+    "from sagemaker.local import LocalSession\n",
+    "\n",
+    "DUMMY_IAM_ROLE = 'arn:aws:iam::111111111111:role/service-role/AmazonSageMaker-ExecutionRole-20200101T000001'\n",
+    "LOCAL_SESSION = LocalSession()\n",
+    "LOCAL_SESSION.config={'local': {'local_code': True}} # Ensure full code locality, see: https://sagemaker.readthedocs.io/en/stable/overview.html#local-mode\n",
+    "\n",
+    "image = 'sagemaker-causal-nex'\n",
     "\n",
     "env={\n",
     "    \"MODEL_SERVER_WORKERS\":\"2\"\n",
     "    }\n",
     "\n",
     "local_regressor = Estimator(\n",
+    "    sagemaker_session=LOCAL_SESSION,\n",
+    "    role = 'role',\n",
     "    image,\n",
-    "    role,\n",
     "    instance_count=1,\n",
     "    instance_type=\"local\")\n",
     "\n",
@@ -377,41 +455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:urllib3.connectionpool:Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<urllib3.connection.HTTPConnection object at 0x2a3db6d30>: Failed to establish a new connection: [Errno 61] Connection refused')': /ping\n",
-      "WARNING:urllib3.connectionpool:Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<urllib3.connection.HTTPConnection object at 0x2a3db41f0>: Failed to establish a new connection: [Errno 61] Connection refused')': /ping\n",
-      "WARNING:urllib3.connectionpool:Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<urllib3.connection.HTTPConnection object at 0x2a3db42e0>: Failed to establish a new connection: [Errno 61] Connection refused')': /ping\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Attaching to uf74mk7e8y-algo-1-a0tr0\n",
-      "\u001b[36muf74mk7e8y-algo-1-a0tr0 |\u001b[0m Starting the inference server with 2 workers.\n",
-      "\u001b[36muf74mk7e8y-algo-1-a0tr0 |\u001b[0m [2023-04-20 06:30:50 +0000] [10] [INFO] Starting gunicorn 20.1.0\n",
-      "\u001b[36muf74mk7e8y-algo-1-a0tr0 |\u001b[0m [2023-04-20 06:30:50 +0000] [10] [INFO] Listening at: unix:/tmp/gunicorn.sock (10)\n",
-      "\u001b[36muf74mk7e8y-algo-1-a0tr0 |\u001b[0m [2023-04-20 06:30:50 +0000] [10] [INFO] Using worker: sync\n",
-      "\u001b[36muf74mk7e8y-algo-1-a0tr0 |\u001b[0m [2023-04-20 06:30:50 +0000] [12] [INFO] Booting worker with pid: 12\n",
-      "\u001b[36muf74mk7e8y-algo-1-a0tr0 |\u001b[0m [2023-04-20 06:30:50 +0000] [13] [INFO] Booting worker with pid: 13\n",
-      "\u001b[36muf74mk7e8y-algo-1-a0tr0 |\u001b[0m 172.21.0.1 - - [20/Apr/2023:06:30:54 +0000] \"GET /ping HTTP/1.1\" 200 1 \"-\" \"python-urllib3/1.26.15\"\n",
-      "!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predictor = local_regressor.deploy(1, 'local', env=env)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,51 +473,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36muf74mk7e8y-algo-1-a0tr0 |\u001b[0m 172.21.0.1 - - [20/Apr/2023:06:35:39 +0000] \"POST /invocations HTTP/1.1\" 415 38 \"-\" \"python-urllib3/1.26.15\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predicted = predictor.predict(test_data).decode('utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This predictor only supports JSON data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(predicted)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gracefully stopping... (press Ctrl+C again to force)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predictor.delete_endpoint()"
    ]
@@ -493,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
