Few extra bits on last push

--- a/local/local-training.ipynb
+++ b/local/local-training.ipynb
@@ -759,7 +759,21 @@
    "metadata": {},
    "source": [
     "### Build and push the container\n",
-    "We are now ready to build this container and push it to Amazon ECR. It will create a new repo in ECR for you. Please ensure you have the correct IAM permissions to push to the ECR repo.\n"
+    "We are now ready to build this container and push it to Amazon ECR. It will create a new repo in ECR for you. Please ensure you have the correct IAM permissions to push to the ECR.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! docker build -f ../local/container/Dockerfile -t sagemaker-local-training-containers/tutorial ../local/container\n",
+    "! docker tag sagemaker-local-training-containers/tutorial {account_id}.dkr.ecr.{region}.amazonaws.com/sagemaker-local-training-containers/local-training:latest\n",
+    "! aws ecr get-login --no-include-email --registry-ids {account_id}\n",
+    "! aws ecr get-login-password --region {region} | docker login --username AWS --password-stdin {account_id}.dkr.ecr.{region}.amazonaws.com\n",
+    "! aws ecr describe-repositories --repository-names sagemaker-local-training-containers/local-training || aws ecr create-repository --repository-name sagemaker-local-training-containers/local-training\n",
+    "! docker push {account_id}.dkr.ecr.{region}.amazonaws.com/sagemaker-local-training-containers/local-training:latest"
    ]
   },
   {
@@ -821,9 +835,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp1hj18mt9-algo-1-x6vc3-1  | [2023-07-31 15:43:53 +0000] [10] [INFO] Handling signal: term\n",
+      "tmp1hj18mt9-algo-1-x6vc3-1  | [2023-07-31 15:43:53 +0000] [55] [INFO] Worker exiting (pid: 55)\n",
+      "tmp1hj18mt9-algo-1-x6vc3-1  | [2023-07-31 15:43:53 +0000] [54] [INFO] Worker exiting (pid: 54)\n",
+      "tmp1hj18mt9-algo-1-x6vc3-1 exited with code 0\n"
+     ]
+    }
+   ],
    "source": [
     "predictor.delete_endpoint()"
    ]
